Version 0.40: This is now a real, completely functional twitter app.<br/><br/>
    &#8226; All settings working in the settings menu.<br/>
    &#8226; Followers and following lists now working for profiles <br/>
    &#8226; Notifications for new tweets, direct messages, and mentions<br/>
    &#8226; Trimming of databases and cache<br/>
    &#8226; New slim font (Roboto light)<br/>
    &#8226; Updates mentions when you update the timeline as well<br/>
    &#8226; Changes to the profiles<br/>
    &#8226; Feedback on button presses<br/>
    &#8226; Attach images from the compose activity and reply activity<br/>
    &#8226; Style changes<br/>
    &#8226; Fix for user pictures on profiles<br/>
    &#8226; Refresh changes<br/>
    &#8226; Changelog added<br/>
    &#8226; number of tweets, followers, and following on profile<br/>
    &#8226; length counter on tweets (can't go over 140)<br/>
    &#8226; tons of other bug fixes<br/><br/>
<br/>

Version 0.30:<br/><br/>
    &#8226; Reduced memory footprint<br/>
    &#8226; Better Handling of images everywhere<br/>
    &#8226; Favorite Tweets page<br/>
    &#8226; Retweets of you page<br/>
    &#8226; New actions in the action bar on the tweets<br/>
    &#8226; Compose new direct messages from action bar and profiles<br/>
    &#8226; Delete direct messages with long click<br/>
    &#8226; Save images from tweets<br/>
    &#8226; Fix for not going back and finding all the tweets<br/><br/>
<br/>

Version 0.20:<br/><br/>
    &#8226; Style changes for main timeline activity (long press opens tweet, click expands, this will be an option later)<br/>
    &#8226; Fixed the animations stuttering<br/>
    &#8226; Direct message fixes<br/>
    &#8226; Made profile activities! Yay! Man that was a lot of work<br/>
    &#8226; Expand tweets contents from the tweet activity<br/>
    &#8226; Reply lists now fully working, can't look into the future yet though, only back<br/>
    &#8226; Better handling of dates in the tweet activity<br/>